Fix icons gaps

--- a/footer-section/css/style.css
+++ b/footer-section/css/style.css
@@ -81,6 +81,9 @@ body {
   color: #525252;
   padding: 0 2px;
 }
+.footer__content__icons {
+  gap: 24px;
+}
 .footer__content__icons a {
   padding: 0;
   color: #a3a3a3;
